app/globals.css
@import 'tailwindcss' theme(static);

@layer base {
  :root {
    --background: oklch(1 0 0);
    --foreground: oklch(0.145 0.004 285.823);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.145 0.004 285.823);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.145 0.004 285.823);
    --primary: oklch(0.205 0.042 265.755);
    --primary-foreground: oklch(0.985 0.002 285.823);
    --secondary: oklch(0.97 0.001 285.823);
    --secondary-foreground: oklch(0.205 0.042 265.755);
    --muted: oklch(0.97 0.001 285.823);
    --muted-foreground: oklch(0.556 0.016 285.938);
    --accent: oklch(0.97 0.001 285.823);
    --accent-foreground: oklch(0.205 0.042 265.755);
    --destructive: oklch(0.577 0.245 27.325);
    --destructive-foreground: oklch(0.577 0.245 27.325);
    --border: oklch(0.922 0.004 285.823);
    --input: oklch(0.922 0.004 285.823);
    --ring: oklch(0.708 0.028 285.823);
    --radius: 0.625rem;
    --sidebar-background: oklch(0.985 0.002 285.823);
    --sidebar-foreground: oklch(0.145 0.004 285.823);
    --sidebar-primary: oklch(0.205 0.042 265.755);
    --sidebar-primary-foreground: oklch(0.985 0.002 285.823);
    --sidebar-accent: oklch(0.97 0.001 285.823);
    --sidebar-accent-foreground: oklch(0.205 0.042 265.755);
    --sidebar-border: oklch(0.922 0.004 285.823);
    --sidebar-ring: oklch(0.708 0.028 285.823);
  }

  .dark {
    --background: oklch(0.145 0.004 285.823);
    --foreground: oklch(0.985 0.002 285.823);
    --card: oklch(0.145 0.004 285.823);
    --card-foreground: oklch(0.985 0.002 285.823);
    --popover: oklch(0.145 0.004 285.823);
    --popover-foreground: oklch(0.985 0.002 285.823);
    --primary: oklch(0.985 0.002 285.823);
    --primary-foreground: oklch(0.205 0.042 265.755);
    --secondary: oklch(0.269 0.006 285.885);
    --secondary-foreground: oklch(0.985 0.002 285.823);
    --muted: oklch(0.269 0.006 285.885);
    --muted-foreground: oklch(0.708 0.028 285.823);
    --accent: oklch(0.269 0.006 285.885);
    --accent-foreground: oklch(0.985 0.002 285.823);
    --destructive: oklch(0.577 0.245 27.325);
    --destructive-foreground: oklch(0.577 0.245 27.325);
    --border: oklch(0.269 0.006 285.885);
    --input: oklch(0.269 0.006 285.885);
    --ring: oklch(0.439 0.01 285.885);
    --sidebar-background: oklch(0.145 0.004 285.823);
    --sidebar-foreground: oklch(0.985 0.002 285.823);
    --sidebar-primary: oklch(0.985 0.002 285.823);
    --sidebar-primary-foreground: oklch(0.205 0.042 265.755);
    --sidebar-accent: oklch(0.269 0.006 285.885);
    --sidebar-accent-foreground: oklch(0.985 0.002 285.823);
    --sidebar-border: oklch(0.269 0.006 285.885);
    --sidebar-ring: oklch(0.439 0.01 285.885);
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-sidebar-background: var(--sidebar-background);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

